# p1_dataCollection

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  Claude.md  DATABASE_SWITCHING.md  Dockerfile  ERROR_HARDENING.md  FIREBASE_SETUP.md  LICENSE  MULTI_PHASE_IMPLEMENTATION_GUIDE_EN.md  MULTI_PHASE_IMPLEMENTATION_GUIDE_TH.md  ORDER_BOOK.md  P1_TO_P2_INTEGRATION_GUIDE.md  PERFORMANCE.md  PHASE1_TO_PHASE2_INTEGRATION.md  QUICKSTART_P1_TO_P2.md  README.md  README_INTEGRATION.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml.disabled
data_collector/: binance_client.py  firebase_collector.py  firebase_websocket.py  hardened_binance_client.py  historical_collector.py  optimized_collector.py  optimized_websocket.py  unified_collector.py  websocket_streamer.py
data_quality/: validator.py
database/: __init__.py  db_factory.py  firebase_manager.py  sqlite_manager.py
examples/: phase1_to_phase2_integration.py  phase1_to_phase2_integration_demo.py
features/: __init__.py  data_loader.py
project_target/: phase_0_overview.md  phase_2_ml_feature_engineering.md  phase_3_ml_model_training.md  phase_4_rl_execution_engine.md  phase_5_live_deployment.md
schemas/: create_tables.sql
scripts/: demo_order_book.py  error_monitor.py  firebase_historical_collection.py  firebase_realtime_stream.py  health_check.py  init_database.py  main_historical_collection.py  optimized_collection.py  run_one_orderbook_snapshot.py  start_realtime_stream.py  test_order_book.py  unified_historical_collection.py  verify_order_book_implementation.py
tests/: test_circuit_breaker.py  test_error_tracker.py
utils/: cache_manager.py  circuit_breaker.py  error_tracker.py  performance_monitor.py  retry_handler.py
